undo redo image viewer