@@ -1,16 +1,16 @@
 package de.machmireinebook.epubeditor.editor;
 
-import java.util.ArrayList;
-import java.util.List;
+import java.util.ArrayDeque;
+import java.util.Deque;
 
 /**
  * User: mjungierek
  * Date: 20.12.2014
  * Time: 21:07
  */
-public class UndoRedoManager<T> extends ArrayList<T>
+public class UndoRedoManager<T> extends ArrayDeque<T>
 {
-    private List<T> redoList = new ArrayList<>();
+    private Deque<T> redoList = new ArrayDeque<>();
 
     public T undo()
     {
@@ -21,9 +21,9 @@ public class UndoRedoManager<T> extends ArrayList<T>
         //wenn letzte Version erreicht ist, dann geben wir immer diese zurück
         else if (size() > 1)
         {
-            redoList.add(0, remove(0));
+            redoList.addFirst(removeFirst());
         }
-        return get(0);
+        return getFirst();
     }
 
     public T redo()
@@ -35,14 +35,35 @@ public class UndoRedoManager<T> extends ArrayList<T>
         //wenn nichts mehr im Redo dann geben wir einfach die aktuelle Version zurück
         else if (!redoList.isEmpty())
         {
-            add(0, redoList.remove(0));
+            addFirst(redoList.removeFirst());
         }
-        return get(0);
+        return getFirst();
     }
 
     public void saveVersion(T version)
     {
-        add(0, version);
+        boolean add = false;
+        if (isEmpty())
+        {
+            add = true;
+        }
+        else
+        {
+            T lastVersion = getFirst();
+            //Version nur hinzufügen wenn sich diese unterscheiden
+            if (!version.equals(lastVersion))
+            {
+                add = true;
+            }
+        }
+        if (add)
+        {
+            if (!redoList.isEmpty()) //offenbar wird an einer undo version weitergearbeitet, dann alles was im redo noch ist verwerfen
+            {
+                redoList.clear();
+            }
+            addFirst(version);
+        }
     }
 
     public boolean hasRedoVersion()
